--- a/thanh-toan/index.html
+++ b/thanh-toan/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=http://nguyen-hieu-nmh.github.io/Minh-Hieu/gio-hang/">
+		<meta http-equiv="refresh" content="0;url=https://nguyen-hieu-nmh.github.io/Minh-Hieu/gio-hang/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "http://nguyen-hieu-nmh.github.io/Minh-Hieu/gio-hang/";
+			window.location = "https://nguyen-hieu-nmh.github.io/Minh-Hieu/gio-hang/";
 		</script>
 
-		<p>You are being redirected to <a href="http://nguyen-hieu-nmh.github.io/Minh-Hieu/gio-hang/">http://nguyen-hieu-nmh.github.io/Minh-Hieu/gio-hang/</a></p>
+		<p>You are being redirected to <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/gio-hang/">https://nguyen-hieu-nmh.github.io/Minh-Hieu/gio-hang/</a></p>
 	</body>
 </html>
