--- a/transformers-4-ky-nguyen-huy-diet/uncategorized/index.html
+++ b/transformers-4-ky-nguyen-huy-diet/uncategorized/index.html
@@ -325,7 +325,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="4691b19ae6"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="91"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="72"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 	</div>
@@ -361,16 +361,16 @@ img.emoji {
 <div class="widget-title"><h2>Phản hồi gần đây</h2></div>
 <ul id="recentcomments">
 <li class="recentcomments">
-<span class="comment-author-link"><a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu" rel="external nofollow ugc" class="url">Hieu</a></span> trong <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/sản%20phẩm/chevrolet-colorado-lt-2-5-mt-4x2/#comment-12">Chevrolet Colorado LT 2.5 MT 4X2</a>
+<span class="comment-author-link"><a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu" rel="external nofollow ugc" class="url">Hieu</a></span> trong <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/cua-hang/chevrolet-colorado-lt-2-5-mt-4x2/#comment-12">Chevrolet Colorado LT 2.5 MT 4X2</a>
 </li>
 <li class="recentcomments">
-<span class="comment-author-link"><a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu" rel="external nofollow ugc" class="url">Hieu</a></span> trong <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/sản%20phẩm/chevrolet-camaro/#comment-11">Chevrolet Camaro</a>
+<span class="comment-author-link"><a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu" rel="external nofollow ugc" class="url">Hieu</a></span> trong <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/cua-hang/chevrolet-camaro/#comment-11">Chevrolet Camaro</a>
 </li>
 <li class="recentcomments">
-<span class="comment-author-link"><a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu" rel="external nofollow ugc" class="url">Hieu</a></span> trong <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/sản%20phẩm/chevrolet-camaro-sao-chep/#comment-10">Chevrolet Traverse</a>
+<span class="comment-author-link"><a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu" rel="external nofollow ugc" class="url">Hieu</a></span> trong <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/cua-hang/chevrolet-camaro-sao-chep/#comment-10">Chevrolet Traverse</a>
 </li>
 <li class="recentcomments">
-<span class="comment-author-link"><a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu" rel="external nofollow ugc" class="url">Hieu</a></span> trong <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/sản%20phẩm/chevrolet-corvette-c8-2021/#comment-6">Chevrolet Corvette C8 2021</a>
+<span class="comment-author-link"><a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu" rel="external nofollow ugc" class="url">Hieu</a></span> trong <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/cua-hang/chevrolet-corvette-c8-2021/#comment-6">Chevrolet Corvette C8 2021</a>
 </li>
 <li class="recentcomments">
 <span class="comment-author-link"><a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu" rel="external nofollow ugc" class="url">Hieu</a></span> trong <a href="https://nguyen-hieu-nmh.github.io/Minh-Hieu/ke-huy-diet-thoi-dai-genisys/uncategorized/#comment-5">Kẻ hủy diệt: Thời đại Genisys</a>
