--- a/cua-hang/chevrolet-colorado-lt-2-5-mt-4x2/index.html
+++ b/cua-hang/chevrolet-colorado-lt-2-5-mt-4x2/index.html
@@ -267,8 +267,8 @@ img.emoji {
 	<form class="cart" action="https://nguyen-hieu-nmh.github.io/Minh-Hieu/cua-hang/chevrolet-colorado-lt-2-5-mt-4x2/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_60d1878e4e7ba">Chevrolet Colorado LT 2.5 MT 4X2 số lượng</label>
-		<input type="number" id="quantity_60d1878e4e7ba" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_60d18a564a536">Chevrolet Colorado LT 2.5 MT 4X2 số lượng</label>
+		<input type="number" id="quantity_60d18a564a536" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="75" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -386,7 +386,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="819393a3be"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="187"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="208"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 				</div>
